# sbproxy

./: .dockerignore  .gcloudignore  .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.cloudbuild  Dockerfile.goreleaser  LICENSE  MIGRATION.md  Makefile  NOTICE  README.md  SECURITY.md  SUPPLY-CHAIN.md  TRADEMARKS.md  deny.toml  docker-compose.yml  docs-audit-prompt.md  docs-audit.md  docs-manifest.md  go.mod  go.sum  llms.txt
bench-synthetic/: Cargo.toml
bench-synthetic/src/: main.rs
crates/sbproxy-agent-detect/: Cargo.toml
crates/sbproxy-agent-detect/fixtures/: README.md  baseline.yaml  ja4_catboost_fixture.onnx
crates/sbproxy-agent-detect/src/: headless_indicators.rs  http_extractors.rs  lib.rs  loader.rs  onnx.rs  payload_extractors.rs  rules.rs  scorer.rs
crates/sbproxy-ai/: Cargo.toml
crates/sbproxy-ai/data/: ai_providers.yml
crates/sbproxy-ai/src/: ai_metrics.rs  ai_policy.rs  alerting.rs  api_routes.rs  assistants.rs  attribution.rs  audio.rs  batch.rs  budget.rs  client.rs  concurrency.rs  context_compress.rs  context_overflow.rs  context_relay.rs  cost_quality.rs  degradation.rs  effective_key_policy.rs  external_guardrail.rs  failure_cause.rs  fill_first.rs  finetune.rs  governance.rs  governance_crdt.rs  governance_redis.rs  handler.rs  hierarchical_budget.rs  idempotency.rs  identity.rs  ids.rs  image.rs  key_scoping.rs  lib.rs  local_host.rs  managed_replica.rs  model_alias.rs  model_directory.rs  multimodal.rs  prompt_cache.rs  prompt_fingerprint.rs  prompts.rs  (+21 more)
crates/sbproxy-ai/tests/: cascade_routing.rs  effective_key_policy_contract.rs  governance_redis.rs  governance_reservations.rs  judge_integration.rs  managed_model.rs  managed_replica_routing.rs
crates/sbproxy-cache/: Cargo.toml
crates/sbproxy-cache/src/: lib.rs  response.rs  two_tier.rs
crates/sbproxy-classifier-client/: Cargo.toml
crates/sbproxy-classifier-client/src/: lib.rs  supervisor.rs
crates/sbproxy-classifier-proto/: Cargo.toml  build.rs
crates/sbproxy-classifier-proto/proto/: classifier.proto
crates/sbproxy-classifier-proto/src/: lib.rs
crates/sbproxy-classifier-sidecar/: Cargo.toml
crates/sbproxy-classifier-sidecar/src/: main.rs
crates/sbproxy-classifiers/: Cargo.toml  build.rs
crates/sbproxy-classifiers/data/: agent_classes_default.yaml  tls-fingerprints.json
crates/sbproxy-classifiers/proto/: judge.proto
crates/sbproxy-classifiers/scripts/: build_fixture_model.py
crates/sbproxy-classifiers/src/: agent_class.rs  agent_classifier_types.rs  embedder.rs  judge_rpc.rs  known_models.rs  lib.rs
crates/sbproxy-config/: Cargo.toml
crates/sbproxy-config/src/: cluster.rs  compiler.rs  duration.rs  key_registry.rs  lib.rs  listing.rs  litellm.rs  model_host.rs  plan.rs  raw.rs  snapshot.rs  source.rs  types.rs  validate.rs
crates/sbproxy-config/tests/: cluster_config.rs  compression_examples.rs  governance_config.rs  l2_redis.rs  listing_examples.rs  model_host_config.rs  response_cache_store.rs  telemetry_config.rs  v1_compat.rs  validate_examples.rs
crates/sbproxy-core/: Cargo.toml
crates/sbproxy-core/src/: admin.rs  admin_cache.rs  admin_cluster.rs  admin_compression.rs  admin_keys.rs  admin_model_host.rs  admin_playground.rs  admin_session.rs  admin_ui.rs  agent_class.rs  alerting.rs  capture_envelope.rs  cluster.rs  cluster_metrics.rs  cluster_models.rs  compression_metrics.rs  compression_runtime.rs  compression_value.rs  context.rs  dispatch.rs  doctor.rs  governance_cluster.rs  governance_runtime.rs  hook_registry.rs  hooks.rs  identity.rs  key_plane.rs  key_policy.rs  lib.rs  mesh_cache.rs  mesh_counters.rs  model_discovery.rs  pipeline.rs  policy_bus.rs  policy_dispatch.rs  rate_limit_budget.rs  reload.rs  router.rs  sb_flags.rs  server.rs  (+2 more)
crates/sbproxy-core/tests/: ai_reload.rs  cluster_authority_runtime.rs  cluster_control_plane.rs  (+13 more)
crates/sbproxy-extension/: Cargo.toml
crates/sbproxy-k8s-operator/: Cargo.toml  Dockerfile.ci
crates/sbproxy-keystore/: Cargo.toml
crates/sbproxy-mesh/: Cargo.toml
crates/sbproxy-middleware/: Cargo.toml
crates/sbproxy-model-host/: Cargo.toml
crates/sbproxy-modules/: Cargo.toml
crates/sbproxy-observe/: Cargo.toml
crates/sbproxy-openapi/: Cargo.toml
crates/sbproxy-platform/: Cargo.toml
crates/sbproxy-plugin/: Cargo.toml
crates/sbproxy-security/: Cargo.toml
crates/sbproxy-storage/: Cargo.toml
crates/sbproxy-storage-mesh/: Cargo.toml
crates/sbproxy-tls/: Cargo.toml
crates/sbproxy-transport/: Cargo.toml
crates/sbproxy-vault/: Cargo.toml
e2e/: .gitignore  Cargo.toml  README.md  build.rs  run-tests-rust.sh  run-tests.sh
e2e/.claude/: ralph-loop.local.md
e2e/conformance/: .gitignore  HOW-TO-RUN.md  README.md  generate-certs.sh  load-test.sh  run-tests.sh
e2e/proto/: echo.proto
e2e/servers/: mock-ai.js  test-server.js
e2e/src/: lib.rs
e2e/tests/: a2a_policy_e2e.rs  action_graphql.rs  action_grpc.rs  action_load_balancer.rs  action_websocket.rs  admin_endpoints.rs  admin_model_management.rs  admin_reload.rs  agent_class.rs  agent_detect_cel.rs  agent_id_in_jws_sub.rs  agent_skills_projection_e2e.rs  agent_web_emission_e2e.rs  agents_json_e2e.rs  ai_budget.rs  ai_content_policy_fallback.rs  ai_cost_quality_routing.rs  ai_crawl_control.rs  ai_crawl_tarpit.rs  ai_crawl_tiers.rs  ai_disallow_prompt_training.rs  ai_large_body.rs  ai_native_inbound.rs  ai_native_provider_translation.rs  ai_output_guardrails.rs  ai_peak_ewma_routing.rs  ai_race_routing.rs  ai_responses_anthropic.rs  ai_routing.rs  ai_streaming.rs  ai_streaming_native_inbound.rs  ai_streaming_translation.rs  ai_streaming_usage.rs  ai_surface_matrix.rs  aipref_parsing_e2e.rs  auth_api_key.rs  auth_basic.rs  auth_bearer.rs  auth_bot.rs  auth_bot_content_digest.rs  (+122 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cel_eval.rs  cel_script.rs  js_execute.rs  llms_txt_parser.rs  lua_execute.rs  robots_txt_parser.rs  rsl_xml_parser.rs  stateful_proxy.rs  wasm_execute.rs  x402_challenge_parser.rs
(+4774 files in other folders)
