[package]
name = "sbproxy-e2e"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

# This crate ships a small `ProxyHarness` library plus a suite of
# integration tests that spawn a built `sbproxy` binary against
# the example sb.yml files and exercise the documented HTTP
# behaviour. Running it requires a release build of the binary:
#
#     cargo build --release -p sbproxy
#     cargo test  --release -p sbproxy-e2e
#
# Disabled-feature coverage can target a separate no-default-features
# build without overwriting the normal suite binary:
#
#     CARGO_TARGET_DIR=target/no-default-features cargo build -p sbproxy --no-default-features
#
# Each test owns its own ephemeral TCP port and writes a temp
# config so the suite parallelises cleanly.

[lib]
path = "src/lib.rs"

[dependencies]
sbproxy-config.workspace = true
# WOR-1635: the tool-versioning e2e builds lockfile fixtures with the
# same digest the gateway computes.
sbproxy-extension.workspace = true
sbproxy-cache.workspace = true
# Wave 1 Q1.9 (redaction.rs) calls into the legacy regex-based redactor
# as a regression floor; the typed redactor lands in R1.2.
sbproxy-observe.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
tempfile = "3"
base64.workspace = true
libc = "0.2"

[dev-dependencies]
# Wave 4 G4.10: boilerplate-stripping e2e calls into the production
# transform's public `apply` method instead of the in-file reference
# stub. Dev-only because no other harness path needs it.
sbproxy-modules.workspace = true

# WOR-1444: deterministic TLS ClientHello e2e coverage generates real
# rustls ClientHello bytes and feeds them through the production parser.
sbproxy-tls.workspace = true

# WOR-805 publish-signed e2e (web_bot_auth_publish_signed_e2e.rs)
# rehydrates the signed JWKS response as an http::Request and runs
# the production verifier against the published JWK as the trust
# anchor. Dev-only because no other test harness path needs it.
sbproxy-middleware.workspace = true

# JWT signing for auth_jwt.rs (replaces hand-encoded HS256 tokens with
# real `jsonwebtoken::encode` calls so failure modes show up cleanly).
jsonwebtoken = { workspace = true }

# Ed25519 for auth_bot.rs - generates a fresh keypair, signs an RFC 9421
# canonical base, and asserts the proxy accepts/rejects round-trips.
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
rand = { workspace = true }

# RFC 9421 signature base helpers re-used by auth_bot.rs to keep the
# signing path byte-identical to the verifier.
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }

# Wave 8 P0 e2e tests construct/validate ULIDs round-tripped through
# the X-Sb-Session-Id header.
ulid = { workspace = true }

# WebSocket end-to-end coverage for action_websocket.rs - spawns a tiny
# echo server and drives an upgrade through the proxy.
tokio-tungstenite = "0.21"
futures-util = "0.3"

# gRPC end-to-end coverage for action_grpc.rs. Pin to 0.12 / prost 0.13
# so the e2e crate uses the same major as opentelemetry-otlp's tonic
# (already in the workspace lock), avoiding a duplicate compile of two
# tonic majors.
tonic = "0.12"
prost = "0.13"

# WOR-1233: span-arrival e2e. A mock OTLP gRPC collector (built from the
# OTLP proto's TraceServiceServer) receives the proxy's AI spans, and the
# test asserts the gen_ai / OpenInference vocabulary arrives intact. The
# proto + opentelemetry crates are pinned to the same majors already in the
# lock via opentelemetry-otlp, so no duplicate compile.
sbproxy-ai.workspace = true
opentelemetry-proto = { version = "0.27", features = ["gen-tonic", "trace"] }
tokio-stream = { version = "0.1", features = ["net"] }

# Compression decoders for compression.rs e2e assertions. Pinned to the
# same versions sbproxy-middleware ships so the test bytes round-trip
# through the same encoder/decoder pair the proxy uses at runtime.
flate2 = "1"
brotli = "3"
zstd = "0.13"

# Wave 1 Q1.x mock servers (HTTP ledger for Q1.2, Web Bot Auth directory
# for Q1.4, WBA conformance for Q1.7) are tiny axum apps bound on
# 127.0.0.1:0. Pin to the same axum major already in the workspace lock
# so we do not pull two majors into the build graph.
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }

# Wave 1 Q1.4 (WOR-85): the bot-auth directory loader enforces HTTPS at
# config load, so the mock directory must terminate TLS. axum-server
# wraps the axum Router with rustls termination; rcgen mints a fresh
# self-signed CA + leaf per test run and the proxy trusts that root via
# `directory.trust_roots`. This keeps production HTTPS enforcement on
# while letting the e2e harness exercise the directory fetch path over
# a real TLS transport. The `tls-rustls-no-provider` feature lets us
# install the `ring` crypto provider explicitly to match the workspace
# rustls configuration in `crates/sbproxy/src/main.rs`.
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rcgen = { workspace = true }
rustls = { workspace = true }
sbproxy-mesh.workspace = true

# Rate-limit budget e2e. Lives at the top level so default discovery
# picks it up without an explicit registration; this entry documents
# the test's name for grep-ability.
[[test]]
name = "rate_limit_budget"
path = "tests/rate_limit_budget.rs"

# WOR-1850: authenticated three-process managed-model data-plane proof.
[[test]]
name = "model_cluster_dispatch"
path = "tests/model_cluster_dispatch.rs"

[build-dependencies]
# Compiles the in-tree `proto/echo.proto` for the gRPC e2e test. Kept
# pinned to the same major as `tonic` above.
tonic-build = "0.12"
