# Q4.11 fuzz harnesses for Wave 4 parsers.
#
# Standalone Cargo manifest (NOT a workspace member) so that
# `cargo build --workspace` for the proxy does not pick it up, and the
# `libfuzzer-sys` link does not contaminate the proxy's release build
# graph. Mirrors the pattern used by `sbproxy-bench/harness/`.
#
# Run from this directory:
#
#     cargo +nightly fuzz run rsl_xml_parser    -- -max_total_time=10
#     cargo +nightly fuzz run robots_txt_parser -- -max_total_time=10
#     cargo +nightly fuzz run llms_txt_parser   -- -max_total_time=10
#
# The 10-second smoke pass is what landed in the commit message for
# this change. CI runs longer; see `.github/workflows/wave4-fuzz.yml`
# (B4.5 / B4.6 fan-out).
#
# G4.6 (llms.txt projection, WOR-130) and WOR-188 (llms_pricing)
# have landed; the `llms_txt_parser` target drives the public
# `sbproxy_modules::transform::{llms_txt, llms_pricing}::parse`
# entry-points directly. G4.5 (robots.txt) and G4.7 (RSL XML
# emitter / parser counterpart) still call in-file stubs; replace
# those once the production parsers are in tree.

# Empty `[workspace]` block: tells cargo this manifest is a standalone
# workspace root. Without it cargo would climb up to the proxy
# workspace and complain we are not a member. We are deliberately not.
[workspace]

[package]
name = "sbproxy-fuzz"
version = "0.0.1"
edition = "2021"
publish = false
license = "BUSL-1.1"

[package.metadata]
cargo-fuzz = true

[dependencies]
# `libfuzzer-sys` is the standard cargo-fuzz harness backend. Pinned
# to the version range that builds against nightly rustc 1.82 which
# is the workspace's MSRV (per Cargo.toml `rust-version`).
libfuzzer-sys = "0.4"

# `quick-xml` is the parser the production RSL `/licenses.xml`
# emitter (G4.7) is expected to reuse. Pulled in here so the
# `rsl_xml_parser` harness has something concrete to call until G4.7
# lands. Pinned conservatively; the proxy's deny.toml will assert
# the same version once B4.4 adds the dep to the workspace.
quick-xml = { version = "0.36", features = ["serialize"] }

# `arbitrary` powers the WOR-34 stateful fuzzer's typed corpus. The
# `derive` feature is what lets us put `#[derive(Arbitrary)]` on
# the `Op` enum so libfuzzer feeds the target a `Vec<Op>` directly
# rather than raw bytes the harness would have to hand-decode.
arbitrary = { version = "1", features = ["derive"] }

# Tokio is the runtime the WOR-34 stateful fuzzer uses to enforce
# a per-op deadlock budget via `tokio::time::timeout`. The
# `current_thread` flavour of the runtime is deliberately the only
# scheduler enabled here; the fuzz target wants minimum overhead per
# iteration, not a full thread-pool-per-iteration.
tokio = { version = "1", features = ["rt", "time", "macros"] }

# Workspace crates the WOR-34 stateful fuzzer drives in-process.
# Path deps work fine even though this crate is intentionally not
# a workspace member (per the file-top comment), and keeping the
# fuzz crate out of the proxy workspace stops `cargo build
# --workspace` from picking up the libfuzzer-sys cdylib edge that
# breaks linking outside `cargo fuzz`.
sbproxy-config = { path = "../crates/sbproxy-config" }
sbproxy-core = { path = "../crates/sbproxy-core" }
sbproxy-observe = { path = "../crates/sbproxy-observe" }

# WOR-168 cel_script fuzz target: drives `CelScriptTransform` with
# arbitrary bytes so the Remove arm (which used to be `unreachable!()`)
# is exercised under adversarial input.
sbproxy-modules = { path = "../crates/sbproxy-modules" }
http = "1"
serde_json = "1"

# WOR-650 script-engine fuzz targets: drive the CEL, Lua, JavaScript,
# and WASM engines (`cel::CelEngine`, `lua::LuaEngine`, `js::JsEngine`,
# `wasm::WasmRuntime`) with adversarial input. This crate is the
# largest attack surface in the proxy; the four targets below feed it
# malformed scripts and modules so sandbox-escape / denial-of-service
# panics surface as fuzzer crashes rather than production aborts.
sbproxy-extension = { path = "../crates/sbproxy-extension" }

[[bin]]
name = "rsl_xml_parser"
path = "fuzz_targets/rsl_xml_parser.rs"
test = false
doc = false

[[bin]]
name = "robots_txt_parser"
path = "fuzz_targets/robots_txt_parser.rs"
test = false
doc = false

[[bin]]
name = "llms_txt_parser"
path = "fuzz_targets/llms_txt_parser.rs"
test = false
doc = false

# x402 challenge body fuzzer (Wave 3 substrate). Listed for symmetry
# with the existing fuzz harness referenced in `Q4.11`'s task spec
# ("match the existing `x402_challenge_parser.rs` shape"). The harness
# itself is shipped here so the Wave 4 batch picks up x402 regression
# coverage too. Once Wave 3's fuzz harness file lives in tree (W3
# follow-up), this entry can be removed and the file moved into the
# canonical W3 location.
[[bin]]
name = "x402_challenge_parser"
path = "fuzz_targets/x402_challenge_parser.rs"
test = false
doc = false

# WOR-34 stateful proxy fuzzer (v1). Drives a sequence of typed ops
# (config_apply, request, advance_time, reload, ...) against an
# in-process `sbproxy-core` instance and asserts global proxy
# invariants after each op. Existing fuzz harnesses in this crate
# are parser-level; this target is one layer up.
[[bin]]
name = "stateful_proxy"
path = "fuzz_targets/stateful_proxy.rs"
test = false
doc = false

# WOR-168 CEL response-body transform fuzzer. Drives
# `CelScriptTransform::from_config` and `evaluate_headers` with
# adversarial bytes so the Remove arm (the panic path the WOR-168
# fix replaced) is exercised end-to-end.
[[bin]]
name = "cel_script"
path = "fuzz_targets/cel_script.rs"
test = false
doc = false

# WOR-650 CEL expression-engine fuzzer. Drives `CelEngine::compile`
# and (on the rare input that parses) `eval` / `eval_bool` against a
# fixed request-shaped context so the parser and evaluator see
# adversarial input. Source length is capped so the fuzzer cannot
# wedge on a multi-megabyte expression.
[[bin]]
name = "cel_eval"
path = "fuzz_targets/cel_eval.rs"
test = false
doc = false

# WOR-650 Lua scripting-engine fuzzer. Drives `LuaEngine::execute` and
# `call_function` under a tight sandbox (25 ms wall-clock, 4 MiB heap,
# pattern API enabled) so a hostile script cannot stall the fuzzer.
# Script length is capped at 4 KiB.
[[bin]]
name = "lua_execute"
path = "fuzz_targets/lua_execute.rs"
test = false
doc = false

# WOR-650 JavaScript scripting-engine fuzzer. Drives
# `JsEngine::execute` and `call_function` under a tight sandbox (25 ms
# CPU budget, 4 MiB heap, 256 KiB stack) so `while (true) {}` and deep
# recursion are bounded. Script length is capped at 4 KiB.
[[bin]]
name = "js_execute"
path = "fuzz_targets/js_execute.rs"
test = false
doc = false

# WOR-650 WASM runtime fuzzer. Feeds arbitrary bytes to
# `WasmRuntime::new` (wasmtime's validating compiler) and, on the rare
# input that compiles, instantiates and runs the module under a tight
# sandbox (16 pages, 25 ms epoch, low fuel). Candidate-module length
# is capped at 256 KiB.
[[bin]]
name = "wasm_execute"
path = "fuzz_targets/wasm_execute.rs"
test = false
doc = false
